@@ -2036,6 +2036,7 @@
 39) kernel: net: ethtool: fix phy adress get from user.<br>
 40) kernel: net: fix net_gso_ok for new GSO types.<br>
 41) kernel: net: netfilter: x_tables: fix unconditional helper.<br>
+42) kernel: net: validate variable length ll headers.<br>
 <br>
 <br>
 <br>
